--- a/latihan/index.html
+++ b/latihan/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 id="judul">Lumoshive-Academy</h1>
+    <button id="tombol">Klik Disini</button>
     <script src="script.js"></script>
   </body>
 </html>
