--- a/latihan-2/index.html
+++ b/latihan-2/index.html
@@ -13,10 +13,7 @@
       <input type="text" id="input" />
     </form>
     <button id="tombol">Submit</button>
-    <style>
-      form {
-      }
-    </style>
+    <style></style>
     <script src="script.js"></script>
   </body>
 </html>
