Tugas 1 dan 2 day 3

--- a/tugas 1/index.html
+++ b/tugas 1/index.html
@@ -3,33 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tugas 1 day 3</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <header>
-      <ul>
-        <li>
-          <button id="input-data">Input Data</button>
-        </li>
-        <li>
-          <button id="list-data">List Data</button>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section id="input">
-        <h1>Form Input</h1>
-        <form>
-          <label>Nama</label>
-          <input type="text" id="nama" />
-        </form>
-        <button id="save">Save</button>
-      </section>
-      <section id="list">
-        <h1>Daftar nama</h1>
-      </section>
-    </main>
+    <ul id="list"></ul>
+
+    <form>
+      <label for="input">Input :</label>
+      <input type="text" id="input" />
+    </form>
+    <button id="tombol">Submit</button>
+    <style></style>
     <script src="script.js"></script>
   </body>
 </html>
